--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,11 +1,25 @@
 @tailwind base;
-@tailwind components;
-@tailwind utilities;
 
 body {
-  font-family: "Battambang";
+  @apply font-body;
 }
 
 h1 {
-  font-family: "Dangrek";
+  @apply text-4xl font-bold font-display mb-6;
 }
+
+p {
+  @apply mb-6;
+}
+
+a {
+  @apply text-teal-700;
+}
+
+a:hover,
+a:focus {
+  @apply underline;
+}
+
+@tailwind components;
+@tailwind utilities;
